# Robotics

cpp-programs/lab1/lab1_proj/: HomTra.cpp  HomTra.h  main.cpp
cpp-programs/lab1/lab1_proj/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ros-ws/src/homtra_publisher/: CMakeLists.txt  package.xml
ros-ws/src/homtra_publisher/include/homtra_publisher/: homtra.h  homtra_publisher_node.h
ros-ws/src/homtra_publisher/src/: homtra.cpp  homtra_publisher_node.cpp
ros-ws/src/lab2_publisher/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ros-ws/src/lab2_publisher/include/lab2_publisher/: FKParser.h  chain.h  homtra.h  joint.h  lab2_publisher_node.h  link.h
ros-ws/src/lab2_publisher/launch/: three-dof-lab2.launch
ros-ws/src/lab2_publisher/src/: FKParser.cpp  chain.cpp  homtra.cpp  joint.cpp  lab2_publisher_node.cpp  link.cpp
ros-ws/src/lab3_kdl/: CMakeLists.txt  package.xml
ros-ws/src/lab3_kdl/include/lab3_kdl/: lab3_client.h  lab3_kdl_node.h  lab3_server.h
ros-ws/src/lab3_kdl/src/: lab3_kdl_node.cpp
ros-ws/src/lab3_kdl/srv/: lab3ik.srv
ros-ws/src/lab4_trajectory/: CMakeLists.txt  package.xml
ros-ws/src/lab4_trajectory/include/lab4_trajectory/: lab4_trajectory.h
ros-ws/src/lab4_trajectory/src/: lab4_trajectory_node.cpp
ros-ws/src/robotteknik/my_simple_controllers/: CMakeLists.txt  package.xml  plugins.xml
ros-ws/src/robotteknik/my_simple_controllers/src/: FKParser.cpp  chain.cpp  chainjnttojacdotsolver.cpp  homtra.cpp  joint.cpp  (+4 more)
(+19 files in other folders)
